# cargo-features = ["edition2024"]

[package]
name = "scheme"
version = "0.1.0"
edition = "2021"
# edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reedline = { version = "0.38" }
phf = { version = "0.11", features = ["macros"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
